@@ -1,3 +1,4 @@
+* Require email only for active user
 * Add maximum authentication attempt
 
 Version 4.6.0 - 2017-10-30
